using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimName
{
    //Animation name
    public const string IDLE = "idle";
    public const string RUN = "run";
    public const string WIN = "win";
    public const string ATTACK = "attack";
    public const string DEAD = "dead";
}
